--- a/template/experiments.html
+++ b/template/experiments.html
@@ -12,11 +12,20 @@
             </p>
         </div>
     </div>
+    <div id="chalk_and_cheese" class="accordion">
+        <h1 class="heading"> Message </h1>
+        <div class="collapsible">
+            <p>
+                <a href="/experiments/chalk_and_cheese">Chalk And Cheese</a> is
+                a simple multiplayer card game - it's not ready yet.
+            </p>
+        </div>
+    </div>
     <div id="exploder" class="accordion">
         <h1 class="heading"> Particle Exploder </h1>
         <div class="collapsible">
             <p>
-                <a href="/exploder">Exploder</a> was a simple exercise to polish
+                <a href="/experiments/exploder">Exploder</a> was a simple exercise to polish
                 my understanding of JavaScript's prototypical inheritance model
                 while learning to make use the html5 canvas element. I took
                 simplistic code from an online tutorial, <a href="http://www.html5canvastutorials.com/labs/html5-canvas-ultimate-flash-killer/">here</a>,
@@ -30,7 +39,7 @@
         <h1 class="heading"> Message </h1>
         <div class="collapsible">
             <p>
-                <a href="/message">Message</a> was an experiment in putting together a
+                <a href="/experiments/message">Message</a> was an experiment in putting together a
                 micro-framework for generating html content - I wanted to see wht I could
                 achieve while minimising external dependencies to just bottle. While somewhat
                 successful, the context management approach I followed with this framework
