--- a/template/experiments.html
+++ b/template/experiments.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div id="chalk_and_cheese" class="accordion">
-        <h1 class="heading"> Message </h1>
+        <h1 class="heading"> Chalk And Cheese </h1>
         <div class="collapsible">
             <p>
                 <a href="/experiments/chalk_and_cheese">Chalk And Cheese</a> is
