I split out chalk and cheese's server to be a seperate project which is deployed to heroku

--- a/template/chalk_and_cheese.html
+++ b/template/chalk_and_cheese.html
@@ -61,6 +61,6 @@
 {% endblock %}
 {% block onload %}
     <script>
-        ChalkAndCheese.init("{{ page['url'] }}");
+        ChalkAndCheese.init("{{ page['extra']['heroku'] }}");
     </script>
 {% endblock %}
