--- a/template/chalk_and_cheese.html
+++ b/template/chalk_and_cheese.html
@@ -61,6 +61,6 @@
 {% endblock %}
 {% block onload %}
     <script>
-        ChalkAndCheese.init("{{ page['extra']['heroku'] }}");
+        ChalkAndCheese.init("{{ app['extra']['heroku'] }}");
     </script>
 {% endblock %}
