Add skimlinks js

--- a/template/base.html
+++ b/template/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/font-size.css">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <script src="/static/js/app/accordion.js"></script>
+    <script type="text/javascript" src="//s.skimresources.com/js/80235X1531378.skimlinks.js"></script>
     {% block head %}{% endblock %}
 </head>
 <body id="wrapper">
